# c-decision-tree

./: .gitignore  DecisionTree.py  README.md  c_DecisionTree.py  pyproject.toml
lumber/: __init__.py  categorical_decision_tree_classifier.py  figures.py  style.py
tests/: test.ipynb
